# tagify-backend

./: .gitignore  Cargo.toml  Insomnia_API.json  Insomnia_api_divided.json  Insomnia_api_reference.json  Insomnia_first_week.json  Insomnia_rev1.json  Insomnia_second_week.json  Insomnia_third_week.json  Insomnia_third_week_v2.json  README.md  Settings.toml  insomnia_api.json  insomnia_divided_routes.json  insomnia_second_week.json  schema.sql
.github/workflows/: rust.yml
certs/: cert.pem  key.pem
credential/: gg-storage.json
reference/: Tagify.v1.yaml  Tagify.v2.yaml
src/: admin_handlers.rs  album_handlers.rs  album_models.rs  config.rs  db.rs  errors.rs  gg_storage.rs  handlers.rs  image_handlers.rs  img_meta_handlers.rs  letsencrypt.rs  main.rs  models.rs  my_cookie_policy.rs  my_identity_service.rs  oauth.rs  user_handlers.rs  user_models.rs  utils.rs
