[package]
name = "backend"
version = "0.1.0"
authors = ["Luis Hebendanz <luis.nixos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-http = "1.0.1"
log = "0.4.8"
env_logger = "0.7.1"
actix-rt = "1.1.1"
actix-files = "0.2.2"
listenfd = "0.3.3"
tokio-postgres = "0.5.4"
deadpool-postgres = "0.5.5"
tokio-pg-mapper-derive = "0.1.5"
tokio-pg-mapper = "0.1.8"
failure = "0.1.8"
serde = "1.0.111"
config = "0.10.1"
rand = "0.7"
actix-identity = "0.2.1"
rust-argon2 = "0.8.2"
futures = "0.3.5"
serde_json = "1.0.55"
time = "0.1.42"
actix-service = "1.0.5"
actix-multipart = "0.2.0"
sanitize-filename = "0.2"
chrono = { version = "0.4", features = ["serde"] }
# rust request sending. Used for google storage
reqwest = { version = "0.10.6", features = ["json"] }
tokio = { version = "0.2", features = ["macros"] }
hyper = "0.13.7"
regex = "1"
bytes = "0.5.6"

[features]
# Treat warnings as a build error.
strict = []
